--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -8,13 +8,13 @@
 <h1>Junior Academia Everis</h1>
 <div class="inicio">
 	<h1>TO-DO LIST</h1>
-	<div class="button"><input type="button" value="New task"  (click)="newTask(newdescription)"></div>
-	<mat-form-field>
-    <input type="text" placeholder="New task description" [(ngModel)]="newdescription">
-	</mat-form-field>
+	<div class="top">
+	<input type="button" value="New task"  (click)="newTask(newdescription)">
+	<input type="text" placeholder="New task description" [(ngModel)]="newdescription">
+	</div>
 	<div class="container" *ngFor="let q of tasks">
 		<p>Task id {{q.id}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{q.description}}
-			<button mat-raised-button (click)="remove(q.id)" style= "float:right;">
+			<button mat-raised-button (click)="remove(q)" style= "float:right;">
             <mat-icon>delete</mat-icon>
         	</button></p>
 		<div class="dropdown menu">
