--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -9,22 +9,25 @@
 <div class="inicio">
 	<h1>TO-DO LIST</h1>
 	<div class="top">
-	<input type="button" value="New task"  (click)="newTask(newdescription)">
-	<input type="text" placeholder="New task description" [(ngModel)]="newdescription">
+	<input type="button" value="New task"  (click)="newTask(newdescription.value)">
+	<input type="text" placeholder="New task description" #newdescription>
 	</div>
-	<div class="container" *ngFor="let q of tasks">
+	<div class="container" *ngFor="let q of tasks; index as idx">
 		<p>Task id {{q.id}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{q.description}}
-			<button mat-raised-button (click)="remove(q)" style= "float:right;">
+			<button mat-raised-button (click)="remove(q.id)" style= "float:right;">
             <mat-icon>delete</mat-icon>
-        	</button></p>
-		<div class="dropdown menu">
-			<select id="status" name="status"
-				class="form-control">
-			<option *ngFor="let st of status" [value]="st.id" [selected]="q.task_status==st.name ? true: null">
-			{{st.name}}
-			</option>	
-			</select>
-		</div>
+			</button></p>
+			
+	
+		<div class="col-12 row p-0 m-0 mt-2 justify-content-start align-baseline">
+            <mat-form-field appearance="fill">
+              <mat-select [(value)]="q.taskstatus" [placeholder]="q.taskstatus" (selectionChange)="update(idx)">
+                <mat-option *ngFor="let st of status" [value]="st.value">
+                  {{st.label}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+        </div>
 	</div>
 </div>
 </body>
